# workshop-docker

./: Dockerfile  app.py  pyproject.toml
